# cuda_practice

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  README.md  setup.py
csrc/: bind.cpp
csrc/native/: gelu.cu  reduce.cu
csrc/prtc/native/: gelu.cu  hello_world.cu  reduce.cu  test.cpp  tma.cu  vector_add.cu
csrc/prtc/wmma/: bind.cpp  bind.h  wmma.cu  wmma.h
csrc/wmma/: wmma.cu
triton/: test.py
